--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  dartz: ^0.10.1
+  flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
