--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dartz: ^0.10.1
   flutter_spinkit: ^5.2.0
   fluttertoast: ^8.2.2
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
